--- a/teamProfile.html
+++ b/teamProfile.html
@@ -13,7 +13,25 @@
         </div>
     
     <!-- cards go here -->
-    undefined
+    
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">kole <br>Manager <br>e <br>e </p>
+              <a href="https://github.com/test" id="github" class="btn btn-primary">Go to github</a>
+              <a href="mailto: e" id="email" class="btn btn-primary">Send an email</a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">engineer <br>Engineer <br>e <br>undefined </p>
+              <a href="https://github.com/test" id="github" class="btn btn-primary">Go to github</a>
+              <a href="mailto: e" id="email" class="btn btn-primary">Send an email</a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">intern <br>Intern <br>e <br>e </p>
+              <a href="https://github.com/test" id="github" class="btn btn-primary">Go to github</a>
+              <a href="mailto: e" id="email" class="btn btn-primary">Send an email</a>
+            </div>
 
     <div class="card m-4" id="cardHome" style="width: 18rem;">
     </div>
